--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -42,8 +42,8 @@
 </section><!--/form-->
 
 <script src="~/js/Shopping/login.js" asp-append-version="true"></script>
-<script src="js/jquery.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="~/js/jquery.js"></script>
+<script src="~/js/bootstrap.min.js"></script>
 
 <script>
     $(function () {
