--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -60,29 +60,27 @@
                         <div class="btn-group pull-right clearfix">
                             <div class="btn-group">
                                 <button type="button" class="btn btn-default dropdown-toggle usa" data-toggle="dropdown">
-                                    USA
+                                    中文
                                     <span class="caret"></span>
                                 </button>
-                                <ul class="dropdown-menu">
-                                    <li><a href="">Canada</a></li>
-                                    <li><a href="">UK</a></li>
-                                </ul>
+                                @* <ul class="dropdown-menu">
+                                    <li><a href="">English</a></li>
+                                </ul> *@
                             </div>
 
                             <div class="btn-group">
                                 <button type="button" class="btn btn-default dropdown-toggle usa" data-toggle="dropdown">
-                                    DOLLAR
+                                    台幣
                                     <span class="caret"></span>
                                 </button>
-                                <ul class="dropdown-menu">
-                                    <li><a href="">Canadian Dollar</a></li>
-                                    <li><a href="">Pound</a></li>
-                                </ul>
+                                @* <ul class="dropdown-menu">
+                                    <li><a href="">美金</a></li>
+                                </ul> *@
                             </div>
                         </div>
                     </div>
                     <div class="col-md-8 clearfix">
-                        <div class="shop-menu clearfix pull-right">
+                        @* <div class="shop-menu clearfix pull-right">
                             <ul class="nav navbar-nav">
                                 <li><a href=""><i class="fa fa-user"></i> Account</a></li>
                                 <li><a href=""><i class="fa fa-star"></i> Wishlist</a></li>
@@ -90,7 +88,7 @@
                                 <li><a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart</a></li>
                                 <li><a asp-area="" asp-controller="Login" asp-action="Index"><i class="fa fa-lock"></i> Login</a></li>
                             </ul>
-                        </div>
+                        </div> *@
                     </div>
                 </div>
             </div>
@@ -110,18 +108,17 @@
                         </div>
                         <div class="mainmenu pull-left">
                             <ul class="nav navbar-nav collapse navbar-collapse">
-                                <li><a href="index.html" class="active">Home</a></li>
-                                <li class="dropdown">
-                                    <a href="#">Shop<i class="fa fa-angle-down"></i></a>
+                                <li><a href="index.html" class="active">商品頁面</a></li>
+                                <li class="dropdown disabled">
+                                    <a href="#">其他<i class="fa fa-angle-down"></i></a>
                                     <ul role="menu" class="sub-menu">
-                                        <li><a href="shop.html">Products</a></li>
-                                        <li><a href="product-details.html">Product Details</a></li>
-                                        <li><a href="checkout.html">Checkout</a></li>
-                                        <li><a href="cart.html">Cart</a></li>
-                                        <li><a asp-area="" asp-controller="Login" asp-action="Index">Login</a></li>
+                                        <li><a href="">聯絡方式</a></li>
+                                        <li><a href="">更多商品</a></li>
+                                        <li><a href="">關於我們</a></li>
+                                        <li><a href="">購物車</a></li>
                                     </ul>
                                 </li>
-                                <li class="dropdown">
+                                @* <li class="dropdown">
                                     <a href="#">Blog<i class="fa fa-angle-down"></i></a>
                                     <ul role="menu" class="sub-menu">
                                         <li><a href="blog.html">Blog List</a></li>
@@ -129,15 +126,15 @@
                                     </ul>
                                 </li>
                                 <li><a href="404.html">404</a></li>
-                                <li><a href="contact-us.html">Contact</a></li>
+                                <li><a href="contact-us.html">Contact</a></li> *@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-sm-3">
+                    @* <div class="col-sm-3">
                         <div class="search_box pull-right">
                             <input type="text" placeholder="Search" />
                         </div>
-                    </div>
+                    </div> *@
                 </div>
             </div>
         </div><!--/header-bottom-->
@@ -152,7 +149,7 @@
 
     <footer class="border-top footer text-muted">
             <!--Footer-->
-            <div class="footer-top">
+            @* <div class="footer-top">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-2">
@@ -230,7 +227,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> *@
             <div class="container">
                 &copy; 2021 - MCS_oneday_intern - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
             </div>
