--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -53,9 +53,9 @@
             <!--header-middle-->
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4 clearfix">
+                    <div class="col-md-5 clearfix">
                         <div class="logo pull-left">
-                            <a href="index.html"><img src="~/images/home/logo.png" alt="" /></a>
+                            <a href="index.html"><img class="logo" src="~/images/home/ms_logo.png" alt="" /></a>
                         </div>
                         <div class="btn-group pull-right clearfix">
                             <div class="btn-group">
