--- a/wwwroot/css/main.css
+++ b/wwwroot/css/main.css
@@ -213,7 +213,7 @@ a#scrollUp i {
 }
 
 .shop-menu ul li a:hover {
-    color: #fe980f;
+    color: #FE980F;
     background: #fff;
 }
 
@@ -318,6 +318,10 @@ ul.sub-menu {
 
 .fa-angle-down {
     padding-left: 5px;
+}
+
+.logo {
+    height: 30px;
 }
 
 @-webkit-keyframes fadeInUp {
@@ -1145,6 +1149,11 @@ h2.title {
     padding-right: 25px;
 }
 
+.head-line {
+    font-size: 34px;
+    margin: 72px 0;
+}
+
 .product-details {
     margin-bottom: 40px;
     overflow: hidden;
@@ -1156,8 +1165,7 @@ h2.title {
 }
 
 .view-product img {
-    border: 1px solid #F7F7F0;
-    height: 380px;
+    /* border: 1px solid #F7F7F0; */
     width: 100%;
 }
 
@@ -1200,7 +1208,7 @@ h2.title {
 }
 
 .product-information {
-    border: 1px solid #F7F7F0;
+    /* border: 1px solid #F7F7F0; */
     overflow: hidden;
     padding-bottom: 60px;
     padding-left: 60px;
@@ -1220,8 +1228,8 @@ h2.title {
 
 .product-information h2 {
     color: #363432;
-    font-family: 'Roboto', sans-serif;
-    font-size: 20px;
+    font-family: 'Segoe UI', 'Roboto', sans-serif;
+    font-size: 24px;
     margin-top: 0;
 }
 
