[Vincent][加入comment & 刪掉comment掉的html]

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
                 <div class="row">
                     <div class="col-md-5 clearfix">
                         <div class="logo pull-left">
-                            <a href="index.html"><img class="logo" src="~/images/home/ms_logo.png" alt="" /></a>
+                            <a href="#"><img class="logo" src="~/images/home/ms_logo.png" alt="" /></a>
                         </div>
                         <div class="btn-group pull-right clearfix">
                             <div class="btn-group">
@@ -63,9 +63,6 @@
                                     中文
                                     <span class="caret"></span>
                                 </button>
-                                @* <ul class="dropdown-menu">
-                                    <li><a href="">English</a></li>
-                                </ul> *@
                             </div>
 
                             <div class="btn-group">
@@ -73,22 +70,10 @@
                                     台幣
                                     <span class="caret"></span>
                                 </button>
-                                @* <ul class="dropdown-menu">
-                                    <li><a href="">美金</a></li>
-                                </ul> *@
                             </div>
                         </div>
                     </div>
                     <div class="col-md-8 clearfix">
-                        @* <div class="shop-menu clearfix pull-right">
-                            <ul class="nav navbar-nav">
-                                <li><a href=""><i class="fa fa-user"></i> Account</a></li>
-                                <li><a href=""><i class="fa fa-star"></i> Wishlist</a></li>
-                                <li><a href="checkout.html"><i class="fa fa-crosshairs"></i> Checkout</a></li>
-                                <li><a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart</a></li>
-                                <li><a asp-area="" asp-controller="Login" asp-action="Index"><i class="fa fa-lock"></i> Login</a></li>
-                            </ul>
-                        </div> *@
                     </div>
                 </div>
             </div>
@@ -108,7 +93,7 @@
                         </div>
                         <div class="mainmenu pull-left">
                             <ul class="nav navbar-nav collapse navbar-collapse">
-                                <li><a href="index.html" class="active">商品頁面</a></li>
+                                <li><a href="#" class="active">商品頁面</a></li>
                                 <li class="dropdown disabled">
                                     <a href="#">其他<i class="fa fa-angle-down"></i></a>
                                     <ul role="menu" class="sub-menu">
@@ -118,23 +103,9 @@
                                         <li><a href="">購物車</a></li>
                                     </ul>
                                 </li>
-                                @* <li class="dropdown">
-                                    <a href="#">Blog<i class="fa fa-angle-down"></i></a>
-                                    <ul role="menu" class="sub-menu">
-                                        <li><a href="blog.html">Blog List</a></li>
-                                        <li><a href="blog-single.html">Blog Single</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="404.html">404</a></li>
-                                <li><a href="contact-us.html">Contact</a></li> *@
                             </ul>
                         </div>
                     </div>
-                    @* <div class="col-sm-3">
-                        <div class="search_box pull-right">
-                            <input type="text" placeholder="Search" />
-                        </div>
-                    </div> *@
                 </div>
             </div>
         </div><!--/header-bottom-->
@@ -147,94 +118,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-            <!--Footer-->
-            @* <div class="footer-top">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-2">
-                            <div class="companyinfo">
-                                <h2><span>e</span>-shopper</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,sed do eiusmod tempor</p>
-                            </div>
-                        </div>
-                        <div class="col-sm-7">
-                            <div class="col-sm-3">
-                                <div class="video-gallery text-center">
-                                    <a href="#">
-                                        <div class="iframe-img">
-                                            <img src="~/images/home/iframe1.png" alt="" />
-                                        </div>
-                                        <div class="overlay-icon">
-                                            <i class="fa fa-play-circle-o"></i>
-                                        </div>
-                                    </a>
-                                    <p>Circle of Hands</p>
-                                    <h2>24 DEC 2014</h2>
-                                </div>
-                            </div>
-
-                            <div class="col-sm-3">
-                                <div class="video-gallery text-center">
-                                    <a href="#">
-                                        <div class="iframe-img">
-                                            <img src="~/images/home/iframe2.png" alt="" />
-                                        </div>
-                                        <div class="overlay-icon">
-                                            <i class="fa fa-play-circle-o"></i>
-                                        </div>
-                                    </a>
-                                    <p>Circle of Hands</p>
-                                    <h2>24 DEC 2014</h2>
-                                </div>
-                            </div>
-
-                            <div class="col-sm-3">
-                                <div class="video-gallery text-center">
-                                    <a href="#">
-                                        <div class="iframe-img">
-                                            <img src="~/images/home/iframe3.png" alt="" />
-                                        </div>
-                                        <div class="overlay-icon">
-                                            <i class="fa fa-play-circle-o"></i>
-                                        </div>
-                                    </a>
-                                    <p>Circle of Hands</p>
-                                    <h2>24 DEC 2014</h2>
-                                </div>
-                            </div>
-
-                            <div class="col-sm-3">
-                                <div class="video-gallery text-center">
-                                    <a href="#">
-                                        <div class="iframe-img">
-                                            <img src="~/images/home/iframe4.png" alt="" />
-                                        </div>
-                                        <div class="overlay-icon">
-                                            <i class="fa fa-play-circle-o"></i>
-                                        </div>
-                                    </a>
-                                    <p>Circle of Hands</p>
-                                    <h2>24 DEC 2014</h2>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-3">
-                            <div class="address">
-                                <img src="~/images/home/map.png" alt="" />
-                                <p>505 S Atlantic Ave Virginia Beach, VA(Virginia)</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> 
-            <div class="container">
-                &copy; 2021 - MCS_oneday_intern - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-            </div>*@
-        </footer>
-        <!--<script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>-->
+    <footer class="border-top footer text-muted"></footer>
         <script src="~/js/jquery.js"></script>
         <script src="~/js/bootstrap.min.js"></script>
         <script src="~/js/jquery.scrollUp.min.js"></script>
