--- a/Views/ProductDetail/Index.cshtml
+++ b/Views/ProductDetail/Index.cshtml
@@ -11,7 +11,6 @@
         <div class="col-sm-8">
             <div class="view-product">
                 <img src="@ViewBag.Product.ImageURL" alt="" />
-                @* <h3>ZOOM</h3> *@
             </div>
             
 
@@ -19,7 +18,7 @@
         <div class="col-sm-4">
             <div class="product-information">
                 <!--/product-information-->
-                <h2>@ViewBag.Product.Product_Name</h2>
+                <h2>@ViewBag.Product.ProductName</h2>
                 <p><b>@ViewBag.Product.Brand</b></p>
                 <div>
                     <img src="~/images/product-details/rating.png" alt="" />
@@ -30,7 +29,7 @@
                 <div>
                     <span>
                         <label>購買數量:</label>
-                        <input type="number" id="buy_quantity" value="1" min="1" max="@ViewBag.Product.Inventory" onChange="updateInput('@ViewBag.Product.Price')"/>
+                        <input type="number" id="buyQuantity" value="1" min="1" max="@ViewBag.Product.Inventory" onChange="updateInput('@ViewBag.Product.Price')"/>
                         <button type="button" class="btn btn-fefault cart" id="buy">
                             <i class="fa fa-shopping-cart"></i>
                             購買
@@ -133,20 +132,32 @@
 <script src="~/js/jquery.js"></script>
 <script src="~/js/bootstrap.min.js"></script>
 <script>
+// 幫購買按鍵加入點擊的所需的function
 $("#buy").on("click", 
 ()=>{
-    let buyurl = '@Url.Action("Buy")'
-    let num = $("#buy_quantity").val();
+    // 購買時所要call的action
+    let buyurl = '@Url.Action("Buy")';
+
+    // 購買數量
+    let num = $("#buyQuantity").val();
+
+    //產品Id
     let productid = @ViewBag.Product.ProductId;
+
+    // 將購買數量及產品Id包裝成一個物件
     let arg={
         ProductNumber : productid, 
         quantity: num
     }
     console.log(arg);
+
+    // 若存貨小於購買數量則購買失敗
     if(num > @ViewBag.Product.Inventory){
         alert("購買數量超出庫存請重新選擇");
         return;
     }
+
+    // 使用post來call controller中的購買action
     $.post(buyurl, arg,  (data)=>{
         console.log(data);
         alert("扣庫成功 - 已購買數量:"+String(data.deductionQuantity));
